# NLSR

./: CMakeLists.txt
conf/: router1.conf  router2.conf  router3.conf  router4.conf
conf/Case1/: router1.sh  router2.sh  router4.sh
conf/setup/: dhcp.sh  router1.sh  router2.sh  router3.sh  router4.sh
scripts/: NLSRsetup.sh  Optional.sh  extract.py  rmNLSRlog.sh  setup.sh  setup_for_virtualbox.sh  setup_vm.sh
src/: hello-protocol.cpp  hello-protocol.hpp  lsdb.cpp  lsdb.hpp
