cmake_minimum_required(VERSION 3.5)
project(NLSR)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    nsync/boost-archive.h
    nsync/openssl.h
    nsync/sync-common.h
    nsync/sync-diff-leaf.cc
    nsync/sync-diff-leaf.h
    nsync/sync-diff-state-container.h
    nsync/sync-diff-state.cc
    nsync/sync-diff-state.h
    nsync/sync-digest.cc
    nsync/sync-digest.h
    nsync/sync-event.h
    nsync/sync-full-leaf.cc
    nsync/sync-full-leaf.h
    nsync/sync-full-state.cc
    nsync/sync-full-state.h
    nsync/sync-interest-container.h
    nsync/sync-interest-table.cc
    nsync/sync-interest-table.h
    nsync/sync-leaf.cc
    nsync/sync-leaf.h
    nsync/sync-logging.cc
    nsync/sync-logging.h
    nsync/sync-logic-event-container.h
    nsync/sync-logic.cc
    nsync/sync-logic.h
    nsync/sync-name-info.cc
    nsync/sync-name-info.h
    nsync/sync-seq-no.cc
    nsync/sync-seq-no.h
    nsync/sync-socket.cc
    nsync/sync-socket.h
    nsync/sync-state-leaf-container.h
    nsync/sync-state.cc
    nsync/sync-state.h
    nsync/sync-std-name-info.cc
    nsync/sync-std-name-info.h
    src/communication/sync-logic-handler.cpp
    src/communication/sync-logic-handler.hpp
    src/publisher/lsa-publisher.cpp
    src/publisher/lsa-publisher.hpp
    src/publisher/lsdb-dataset-interest-handler.cpp
    src/publisher/lsdb-dataset-interest-handler.hpp
    src/publisher/lsdb-status-publisher.cpp
    src/publisher/lsdb-status-publisher.hpp
    src/publisher/segment-publisher.hpp
    src/route/face-map.cpp
    src/route/face-map.hpp
    src/route/fib-entry.cpp
    src/route/fib-entry.hpp
    src/route/fib.cpp
    src/route/fib.hpp
    src/route/map-entry.hpp
    src/route/map.cpp
    src/route/map.hpp
    src/route/name-prefix-table-entry.cpp
    src/route/name-prefix-table-entry.hpp
    src/route/name-prefix-table.cpp
    src/route/name-prefix-table.hpp
    src/route/nexthop-list.cpp
    src/route/nexthop-list.hpp
    src/route/nexthop.cpp
    src/route/nexthop.hpp
    src/route/routing-table-calculator.cpp
    src/route/routing-table-calculator.hpp
    src/route/routing-table-entry.hpp
    src/route/routing-table.cpp
    src/route/routing-table.hpp
    src/security/certificate-store.hpp
    src/tlv/adjacency-lsa.cpp
    src/tlv/adjacency-lsa.hpp
    src/tlv/adjacency.cpp
    src/tlv/adjacency.hpp
    src/tlv/coordinate-lsa.cpp
    src/tlv/coordinate-lsa.hpp
    src/tlv/lsa-info.cpp
    src/tlv/lsa-info.hpp
    src/tlv/lsdb-status.cpp
    src/tlv/lsdb-status.hpp
    src/tlv/name-lsa.cpp
    src/tlv/name-lsa.hpp
    src/tlv/tlv-nlsr.hpp
    src/update/prefix-update-commands.cpp
    src/update/prefix-update-commands.hpp
    src/update/prefix-update-processor.cpp
    src/update/prefix-update-processor.hpp
    src/utility/face-controller.cpp
    src/utility/face-controller.hpp
    src/utility/name-helper.hpp
    src/adjacency-list.cpp
    src/adjacency-list.hpp
    src/adjacent.cpp
    src/adjacent.hpp
    src/common.hpp
    src/conf-file-processor.cpp
    src/conf-file-processor.hpp
    src/conf-parameter.cpp
    src/conf-parameter.hpp
    src/hello-protocol.cpp
    src/hello-protocol.hpp
    src/logger.cpp
    src/logger.hpp
    src/lsa.cpp
    src/lsa.hpp
    src/lsdb.cpp
    src/lsdb.hpp
    src/main.cpp
    src/name-prefix-list.cpp
    src/name-prefix-list.hpp
    src/nlsr-runner.cpp
    src/nlsr-runner.hpp
    src/nlsr.cpp
    src/nlsr.hpp
    src/sequencing-manager.cpp
    src/sequencing-manager.hpp
    src/test-access-control.hpp
    src/validator.hpp
    tests/publisher/publisher-fixture.hpp
    tests/publisher/test-lsa-publisher.cpp
    tests/publisher/test-lsdb-dataset-interest-handler.cpp
    tests/publisher/test-lsdb-status-publisher.cpp
    tests/publisher/test-segment-publisher.cpp
    tests/security/test-certificate-store.cpp
    tests/tlv/test-adjacency-lsa.cpp
    tests/tlv/test-adjacency.cpp
    tests/tlv/test-coordinate-lsa.cpp
    tests/tlv/test-lsa-info.cpp
    tests/tlv/test-lsdb-status.cpp
    tests/tlv/test-name-lsa.cpp
    tests/update/test-prefix-update-processor.cpp
    tests/utility/test-face-controller.cpp
    tests/boost-test.hpp
    tests/control-commands.hpp
    tests/identity-fixture.cpp
    tests/main.cpp
    tests/test-adjacency-list.cpp
    tests/test-adjacent.cpp
    tests/test-common.hpp
    tests/test-conf-file-processor.cpp
    tests/test-conf-parameter.cpp
    tests/test-fib-entry.cpp
    tests/test-fib.cpp
    tests/test-hyperbolic-calculator.cpp
    tests/test-link-state-calculator.cpp
    tests/test-lsa.cpp
    tests/test-lsdb.cpp
    tests/test-map-entry.cpp
    tests/test-map.cpp
    tests/test-name-prefix-list.cpp
    tests/test-name-prefix-table-entry.cpp
    tests/test-name-prefix-table.cpp
    tests/test-nexthop-list.cpp
    tests/test-nexthop.cpp
    tests/test-nlsr.cpp
    tests/test-routing-table-entry.cpp
    tests/test-routing-table.cpp
    tests/test-sequencing-manager.cpp
    tests/test-sync-logic-handler.cpp
    tests-integrated/boost-test.hpp
    tests-integrated/main.cpp
    tests-integrated/test-validator.cpp
    tools/nlsrc.cpp
    tools/nlsrc.hpp)

add_executable(NLSR ${SOURCE_FILES})